Make capacity global